@@ -311,7 +311,7 @@ void _ck_assert_failed(const char *file, int line, const char *expr, ...)
     if(cur_fork_status() == CK_FORK)
     {
 #if defined(HAVE_FORK) && HAVE_FORK==1
-        exit(1);
+        _exit(1);
 #endif /* HAVE_FORK */
     }
     else
